# django-typer

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  SECURITY.md  backup.py  check.sh  examples  examples.py  howto.py  justfile  manage.py  pyproject.toml  setup.cfg  test.py  zizmor.yml
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  linting.yml  openssf-scorecard.yml  release.yml  scorecard.yml  static.yml  test.yml  testing.yml  update_coc.yml  zizmor.yml
.github/workflows/security/: scorecard.yml
django_typer/: __init__.py  apps.py  completers.py  config.py  parsers.py  patch.py  types.py  utils.py
django_typer/completers/: __init__.py  apps.py  cmd.py  db.py  model.py  path.py
django_typer/examples/: basic.py  hierarchy.py  multi.py
django_typer/examples/typer/: hierarchy.py  multi.py
django_typer/management/: __init__.py
django_typer/management/commands/: shellcompletion.py
django_typer/management/extensions/: shellcompletion.py
django_typer/parsers/: __init__.py  apps.py  model.py
django_typer/scripts/: bash.tmpl  powershell.tmpl  zsh.tmpl
django_typer/shells/: __init__.py  bash.py  fish.py  fish.tmpl  powershell.py  zsh.py
django_typer/templates/shell_complete/: bash.sh  fish.fish  powershell.ps1  zsh.sh
django_typer/tests/: adapted.py  backup.py  click_test.py  completion_tests.py  conftest.py  django_manage.py  example_settings.py  examples.py  hints.py  howto.py  manage.py  override.py  settings.py  settings2.py  settings_fail_check.py  settings_tb_bad_config.py  settings_tb_change_defaults.py  settings_tb_false.py  settings_tb_none.py  settings_throw_init_exception.py  test_adapter_pattern.py  test_backup_example.py  test_basics.py  test_callbacks.py  test_chaining.py  test_cmd_definition.py  test_django_params.py  test_echo.py  test_empty.py  test_examples.py  test_get_command.py  test_groups.py  test_handle.py  test_handle_as_init.py  test_help_precedence.py  test_howto.py  test_inheritance.py  test_interface.py  test_interference.py  test_modify_on_init.py  (+19 more)
django_typer/tests/adapter1/: apps.py
django_typer/tests/adapter2/: apps.py
django_typer/tests/examples/: apps.py
django_typer/tests/polls/: apps.py  models.py
django_typer/tests/settings/: adapted.py  adapted1.py  adapted1_2.py  adapted2_1.py  backup.py  backup_ext.py  backup_inherit.py  base.py  examples.py  howto.py  override.py  settings2.py  settings_fail_check.py  settings_tb_change_defaults.py  settings_tb_false.py  settings_tb_none.py  settings_throw_init_exception.py  typer_examples.py
django_typer/tests/shellcompletion/: __init__.py  test_bash.py  test_default_shell.py  test_fish.py  test_powershell.py  test_zsh.py
django_typer/tests/test_app/: apps.py  models.py
django_typer/tests/test_app2/: apps.py
doc/: .readthedocs.yaml  Makefile  broken_links.py  requirements.txt
doc/source/: architecture.rst  changelog.rst  commands.rst  conf.py  extensions.rst  howto.rst  index.rst  performance.rst  reference.rst  refs.rst  shell_completion.rst  showcase.rst  tutorial.rst
doc/source/_static/: commands.css  showcase.css  style.css
doc/source/diagrams/: django_typer_upstream.drawio
doc/source/directives/: literalinclude.py
doc/source/ext/: backup_example.py  literalinclude.py
doc/source/extensions/: literalinclude.py
doc/source/reference/: completers.rst  index.rst  management.rst  parsers.rst  shell_completion.rst  shells.rst  types.rst  utils.rst
examples/basic/: apps.py
examples/extensions/backup/: apps.py
examples/extensions/media1/: apps.py
examples/extensions/media2/: apps.py
examples/extensions/my_app/: apps.py
examples/plugins/backup/: apps.py
examples/plugins/backup_files/: apps.py
examples/plugins/files1/: apps.py
examples/plugins/files2/: apps.py
examples/plugins/media1/: apps.py
examples/plugins/media2/: apps.py
examples/plugins/my_app/: apps.py
examples/polls/: apps.py  models.py
examples/polls/migrations/: 0001_initial.py
examples/typer/: apps.py
profiling/: polls.json  profile.json  profile.py  urls.py  wsgi.py
profiling/no_typer/: apps.py
profiling/polls/: models.py
profiling/polls/migrations/: 0001_initial.py
profiling/settings/: basic.py  no_typer.py  polls.py  polls_no_typer.py  polls_with_typer.py  with_typer.py  with_typer_app.py
profiling/typer_rich/: index.html
profiling/with_typer/: apps.py
src/django_typer/: __init__.py  apps.py  config.py  patch.py  types.py  utils.py
src/django_typer/completers/: __init__.py  model.py  settings.py
tests/: conftest.py  fallback.py  frame_check.py  missed_tests.py  test_backup_example.py  test_basics.py  test_callbacks.py  test_chaining.py  test_django_params.py  test_echo.py  test_empty.py  test_examples.py  test_file_handles.py  test_finalize.py  test_get_command.py  test_groups.py  test_handle.py  test_handle_as_init.py  test_help_precedence.py  test_howto.py  test_inheritance.py  test_interface.py  test_interference.py  test_modify_on_init.py  test_multiple_cmds.py  test_native.py  test_native_inheritance.py  test_native_plugin.py  test_overloads.py  test_parser_completers.py  test_perf.py  test_plugin_pattern.py  test_poll_example.py  test_prompt_options.py  test_result_callback.py  test_return_values.py  test_static.py  test_tracebacks.py  test_usage_errors.py  test_utils.py  (+3 more)
tests/apps/bad/: apps.py
tests/media/: file_binary.txt  file_text.txt
tests/settings/: adapted.py  adapted1.py  adapted1_2.py  adapted2_1.py  backup.py  backup_ext.py  backup_inherit.py  backup_pluggy.py  bad.py  base.py  completion.py  examples.py  howto.py  i18n_de.py  mod_init.py  no_django_typer.py  override.py  perf_no_typer.py  perf_typer.py  perf_typer_no_app.py  settings_tb_bad_config.py  settings_tb_change_defaults.py  settings_tb_no_install.py  translate.py  typer_examples.py
tests/shellcompletion/: __init__.py  django_manage.py  test_bash.py  test_default_shell.py  test_fish.py  test_powershell.py  test_shell_resolution.py  test_zsh.py
(+621 files in other folders)
