[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-typer"
version = "3.0.0"
description = "Use Typer to define the CLI for your Django management commands."
authors = [
    "Brian Kohan <bckohan@gmail.com>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/django-commons/django-typer"
homepage = "https://django-typer.readthedocs.io"
keywords = ["django", "CLI", "management", "Typer", "commands"]
packages = [
    { include = "django_typer" }
]
exclude = ["django_typer/locale"]
classifiers = [
    "Environment :: Console",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.urls]
"Homepage" = "https://django-typer.readthedocs.io"
"Documentation" = "https://django-typer.readthedocs.io"
"Repository" = "https://github.com/django-commons/django-typer"
"Issues" = "https://github.com/django-commons/django-typer/issues"
"Changelog" = "https://django-typer.readthedocs.io/en/latest/changelog.html"
"Code_of_Conduct" = "https://github.com/django-commons/membership/blob/main/CODE_OF_CONDUCT.md"

[tool.poetry.scripts]
manage = "tests.manage:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Django = ">=3.2,<6.0"

click = ">=8.1.8,<9.0"

# typer's release history is full of breaking changes for minor versions
# given the reliance on some of its private internals we peg the typer
# version very strictly to bug fix releases for specific minor lines.
typer-slim = ">=0.14.0,<0.16.0"

# this should track typer's rich dependency, so long as our console
# patches still work - so be sure to test on the low end of the range
rich = { version = ">=10.11.0,<14.0.0", optional = true }

shellingham = ">=1.5.4,<2.0"

# we need this on 3.9 for ParamSpec
typing-extensions = { version = ">=3.7.4.3", markers = "python_version < '3.10'" }

[tool.poetry.group.dev.dependencies]
ipdb = ">=0.13.13"
ipython = [
    { version = ">=8.20.0", markers = "python_version >= '3.10'" },
    { version = ">=8.18.1", markers = "python_version >= '3.9'" }
]
pytest-django = ">=4.8.0"
pytest-cov = ">=5.0.0"
mypy = ">=1.0"
aiohttp = ">=3.9.1"
pytest-env = ">=1.0.0"
django-stubs = ">=4.2.7"
pexpect = ">=4.9.0"
pyright = {extras = ["nodejs"], version = ">=1.1.357"}
ruff = ">=0.4.1"
graphviz = ">=0.20.3"
pluggy = ">=1.5.0"
pywinpty = { version = ">=2.0.14", markers = "sys_platform == 'win32'" }
pytest-timeout = ">=2.3.1"
pre-commit = ">=4.0.1"

[tool.poetry.extras]
rich = ["rich"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = ">=2024.7.18"
sphinx-tabs = ">=3.4.5"
readme-renderer = {extras = ["md"], version = ">=42"}
sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = ">=0.5.1", markers="python_version >= '3.9'"}
doc8 = ">=1.1.1"
Sphinx = [
    { version = ">=8.0", markers = "python_version >= '3.10'" },
    { version = ">=7.4", markers = "python_version >= '3.9'" }
]
docutils = ">=0.21"
sphinx-autobuild = ">=2024.10.3"

[tool.poetry.group.psycopg3]
optional = true

[tool.poetry.group.psycopg3.dependencies]
psycopg = "^3.1.8"

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
local_partial_types = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true


# todo doc8 configuration here is not being picked up and doesnt seem to be working
# as expected - for now pass these parameters manually
[tool.doc8]
max-line-length = 100
sphinx = true
ignore = [ "D004" ]

[tool.pytest.ini_options]
# py.test options:
DJANGO_SETTINGS_MODULE = "tests.settings.base"
python_files = "test_*.py"
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__ shellcompletion"
env = [
    "TERMINAL_WIDTH=80",
]

addopts = [
  "--strict-markers",
  "--cov=django_typer",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered"
]
markers = [
    "rich: marks tests as requiring rich to be installed",
    "no_rich: marks tests as requiring rich to not be installed"
]

# upstream typer has deprecated shell_completion in favor of autocomplete, but
# has not updated the autocomplete interface. We silence this warning for now
# because there is no way to fix it!
# https://github.com/fastapi/typer/pull/1006
filterwarnings = [
    "ignore:.*shell_complete.*:DeprecationWarning:typer.core"
]

[tool.coverage.run]
branch = true
source = ["django_typer"]
concurrency = ["multiprocessing", "thread"]
parallel = true
relative_files = true
command_line = "-m pytest --cov=django_typer"

[tool.coverage.paths]
source = [
    "django_typer"
]

[tool.pyright]
exclude = ["tests/**/*"]
include = [
    "django_typer"
]

[tool.ruff]
line-length = 88
exclude = [
    "doc",
    "dist",
    "examples"
]

[tool.ruff.lint]
exclude = [
    "tests/**/*"
]
