[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-typer"
version = "3.6.0"
requires-python = ">=3.10,<4.0"
description = "Use Typer to define the CLI for your Django management commands."
authors = [
  {name = "Brian Kohan", email = "bckohan@gmail.com"},
]
license = "MIT"
license-files = [ "LICENSE" ]
readme = "README.md"
repository = "https://github.com/django-commons/django-typer"
homepage = "https://django-typer.readthedocs.io"
keywords = ["django", "CLI", "management", "Typer", "commands"]
dependencies = [
    "Django>=4.2,<6.1",
    "click>=8.1.8,<8.4",
    # typer's release history is full of breaking changes for minor versions
    # given the reliance on some of its private internals we peg the typer
    # version very strictly to bug fix releases for specific minor lines.
    "typer>=0.23.1,<0.24.0",
    # we need this on 3.9 for ParamSpec
    "typing-extensions>=3.7.4.3; python_version < '3.10'",
]
classifiers = [
    "Environment :: Console",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/django_typer"]

[project.urls]
"Homepage" = "https://django-typer.readthedocs.io"
"Documentation" = "https://django-typer.readthedocs.io"
"Repository" = "https://github.com/django-commons/django-typer"
"Issues" = "https://github.com/django-commons/django-typer/issues"
"Changelog" = "https://django-typer.readthedocs.io/en/stable/changelog.html"
"Code_of_Conduct" = "https://github.com/django-commons/membership/blob/main/CODE_OF_CONDUCT.md"


[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
local_partial_types = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
mypy_path = "src"
modules = "django_typer"
plugins = ["mypy_django_plugin.main"]

# todo doc8 configuration here is not being picked up and doesn't seem to be working
# as expected - for now pass these parameters manually
[tool.doc8]
max-line-length = 100
sphinx = true
ignore = [ "D004" ]
ignore-path = [
  "doc/source/_static/img/*.txt"
]

[tool.pytest.ini_options]
# py.test options:
DJANGO_SETTINGS_MODULE = "tests.settings.base"
python_files = "test_*.py"
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__ shellcompletion"
env = [
    "TERMINAL_WIDTH=80",
]
addopts = [
  "-p tests.toggle_rich",
  "--strict-markers",
  "--cov=django_typer",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered"
]
markers = [
    "rich: marks tests as requiring rich to be installed",
    "no_rich: marks tests as requiring rich to not be installed"
]

# upstream typer has deprecated shell_completion in favor of autocomplete, but
# has not updated the autocomplete interface. We silence this warning for now
# because there is no way to fix it!
# https://github.com/fastapi/typer/pull/1006
filterwarnings = [
    "ignore:.*shell_complete.*:DeprecationWarning:typer.core"
]

[tool.coverage.run]
branch = true
source = ["django_typer"]
concurrency = ["multiprocessing", "thread"]
parallel = true
relative_files = true
command_line = "-m pytest --cov=django_typer"

[tool.coverage.paths]
source = [
    "src/django_typer"
]

[tool.django-stubs]
django_settings_module = "tests.settings.base"


[tool.pyright]
exclude = ["tests/**/*"]
include = [
    "src/django_typer",
]

[tool.ruff]
line-length = 88
exclude = [
    "doc",
    "dist",
    "examples"
]
target-version = "py310"

[tool.ruff.lint]
exclude = [
    "tests/**/*"
]

[dependency-groups]
colorama = [
    "colorama>=0.4.6; sys_platform == 'win32'",
]
docs = [
    "doc8>=1.1.2",
    "furo>=2024.8.6",
    "readme-renderer[md]>=44.0",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-django>=2.5",
    "sphinxcontrib-typer[png]>=0.8.0",
    "pluggy>=1.5.0",
]
profiling = [
    "tuna>=0.5.11",
]
psycopg3 = [
    "psycopg>=3.1.8",
]

typing = [
    "pyright>=1.1.390",
    "mypy>=1.19.1",
    "django-stubs[compatible-mypy]>=5.1.3",
    "django-stubs-ext>=5.1.3",
]
lint = [
    "ruff>=0.15.0", 
    "readme-renderer[md]>=43.0",
    "doc8>=1.1.2"
]
precommit = [
    "pre-commit>=3.5.0",
]
coverage = [
    "coverage[toml]>=7.6.1"
]
test = [
    { include-group = "coverage" },
    "playwright>=1.58.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "pytest-env>=1.1.5",
    "pytest-timeout>=2.3.1",
    "python-dateutil>=2.9.0.post0",
    "pywinpty>=3.0.0; sys_platform == 'win32'",
    "maturin>=1.9.4; sys_platform == 'win32'",
    "pluggy>=1.5.0",
    "graphviz>=0.20.3",
    "pexpect>=4.9.0",
]
dev = [
    { include-group = "typing" },
    { include-group = "test" },
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "precommit" },
    { include-group = "colorama" },
    "packaging>=24.2",
    "tomlkit>=0.13.3",
    "ipdb>=0.13.13",
    "ipython>=8.18.1"
]
